<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/widget_margin"
    android:padding="16dp"
    android:id="@+id/widget_main_layout"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/no_content_description"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bill_name_text_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:text="@string/bill_name_widget_holder"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            tools:text="Bill name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_amount_text_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_text_widget_holder"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray"
                tools:text="$19.99" />

            <TextView
                android:id="@+id/bill__paid_status_text_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray"
                tools:text="[paid]" />

            <TextView
                android:id="@+id/bill__on_hold_status_text_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray"
                tools:text="[paid]" />

        </LinearLayout>

        <TextView
            android:id="@+id/bill_due_date_text_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_holder_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            tools:text="Due date" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/widget_upcoming_bill_text"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:text="@string/upcoming_bill_text_widget"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>