<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".activities.ViewBillsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_bills_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progress_circular_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/no_bills_found_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/no_bills_found_tv"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:visibility="invisible"
        app:drawableLeftCompat="@drawable/budget_64"
        app:drawableStartCompat="@drawable/budget_64" />

    <!-- Add new Bill -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_new_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:onClick="goToAddNewBillActivity"
        android:tint="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_bill_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:visibility="invisible"
        android:onClick="addNextRecurringToHomeScreen"
        app:srcCompat="@drawable/budget_64" />

    <!-- Search for Bill -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_for_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:onClick="searchForBill"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <RelativeLayout
        android:id="@+id/search_bill_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/search_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/bill_search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="none"
                    android:background="#f5f5f5"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/search_for_a_bill_edit_text"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapSentences"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/edit_text_color" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/check_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:clickable="true"
                android:contentDescription="@string/no_content_description"
                android:focusable="true"
                android:onClick="hideSearchBillLayout"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_cancel_white_36dp"
                android:tint="@color/colorPrimaryDark" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_bills_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_head" />

        <ProgressBar
            android:id="@+id/top_progress_circular_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/no_search_bills_found_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no_search_bills_found_tv"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:visibility="invisible"
            app:drawableLeftCompat="@drawable/budget_64"
            app:drawableStartCompat="@drawable/budget_64" />

    </RelativeLayout>

</RelativeLayout>